fix bug with max_length in tokenizer. improved loading vectors. added weight initialization

--- a/experimental/1_nbow.ipynb
+++ b/experimental/1_nbow.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7fbf244dc250>\n"
+      "<torchtext.experimental.datasets.raw.text_classification.RawTextIterableDataset object at 0x7f63ac6b23a0>\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
     "            tokens = [token.lower() for token in tokens]\n",
     "            \n",
     "        if self.max_length is not None:\n",
-    "            tokens = tokens[:max_length]\n",
+    "            tokens = tokens[:self.max_length]\n",
     "            \n",
     "        return tokens"
    ]
@@ -631,6 +631,7 @@
    "source": [
     "pad_token = '<pad>'\n",
     "pad_idx = vocab[pad_token]\n",
+    "\n",
     "collator = Collator(pad_idx)"
    ]
   },
@@ -674,7 +675,6 @@
    "source": [
     "class NBOW(nn.Module):\n",
     "    def __init__(self, input_dim, emb_dim, output_dim, pad_idx):\n",
-    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
@@ -806,7 +806,7 @@
     }
    ],
    "source": [
-    "glove.vectors['the']"
+    "glove['the']"
    ]
   },
   {
@@ -838,7 +838,7 @@
     }
    ],
    "source": [
-    "glove.vectors['shoggoth']"
+    "glove['shoggoth']"
    ]
   },
   {
@@ -870,12 +870,61 @@
     }
    ],
    "source": [
-    "glove.vectors['The']"
+    "glove['The']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glove_vocab = glove.vectors.get_stoi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'the' in glove_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'The' in glove_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -883,30 +932,26 @@
    },
    "outputs": [],
    "source": [
-    "def get_pretrained_embedding(vectors, vocab, unk_token):\n",
+    "def get_pretrained_embedding(initial_embedding, pretrained_vectors, vocab, unk_token):\n",
     "    \n",
-    "    unk_vector = vectors[unk_token]\n",
-    "    emb_dim = unk_vector.shape[-1]\n",
-    "    zero_vector = torch.zeros(emb_dim)\n",
-    "\n",
-    "    pretrained_embedding = torch.zeros(len(vocab), emb_dim) \n",
+    "    pretrained_embedding = torch.FloatTensor(initial_embedding.weight.clone()).detach()    \n",
+    "    pretrained_vocab = pretrained_vectors.vectors.get_stoi()\n",
     "    \n",
     "    unk_tokens = []\n",
     "    \n",
     "    for idx, token in enumerate(vocab.itos):\n",
-    "        pretrained_vector = vectors[token]\n",
-    "        if torch.all(torch.eq(pretrained_vector, unk_vector)):\n",
-    "            unk_tokens.append(token)\n",
-    "            pretrained_embedding[idx] = zero_vector\n",
-    "        else:\n",
+    "        if token in pretrained_vocab:\n",
+    "            pretrained_vector = pretrained_vectors[token]\n",
     "            pretrained_embedding[idx] = pretrained_vector\n",
+    "        else:\n",
+    "            unk_tokens.append(token)\n",
     "        \n",
     "    return pretrained_embedding, unk_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -916,108 +961,13 @@
    "source": [
     "unk_token = '<unk>'\n",
     "\n",
-    "pretrained_embedding, unk_tokens = get_pretrained_embedding(glove.vectors, vocab, unk_token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 139
-    },
-    "colab_type": "code",
-    "id": "YGO-9DWBdFn1",
-    "outputId": "fb8178fc-0f1c-43ba-b9a8-0b25ec343a54"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
-       "        ...,\n",
-       "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
-       "        [-0.7250,  0.7545,  0.1637,  ..., -0.0144, -0.1761,  0.3418],\n",
-       "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pretrained_embedding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "j36jzQpPdFn3",
-    "outputId": "7ebe041d-b092-498e-ea16-0fce8c20ed33"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "678"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(unk_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "yzvhgf8tdFn5",
-    "outputId": "8c30dc4a-9a2b-4c11-8c7b-1d2cb3ba0aee"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['<unk>', '<pad>', '\\x96', 'hadn', '****', '100%', 'camera-work', '*1/2', '$1', '*****']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(unk_tokens[:10])"
+    "pretrained_embedding, unk_tokens = get_pretrained_embedding(model.embedding, glove, vocab, unk_token)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 139
-    },
-    "colab_type": "code",
-    "id": "OKxH6f7ddFn8",
-    "outputId": "8ff8c71b-725e-417d-e3fa-7ffeac2e342d"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1043,20 +993,12 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 139
-    },
-    "colab_type": "code",
-    "id": "AnE6D4MAdFn_",
-    "outputId": "8b3fea1a-9bcb-4fd9-ba78-72baee94f96a"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.5903, -0.1947, -0.2415],\n",
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
@@ -1071,12 +1013,99 @@
     }
    ],
    "source": [
-    "model.embedding.weight.data.copy_(pretrained_embedding)"
+    "pretrained_embedding"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "j36jzQpPdFn3",
+    "outputId": "7ebe041d-b092-498e-ea16-0fce8c20ed33"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "678"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unk_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "yzvhgf8tdFn5",
+    "outputId": "8c30dc4a-9a2b-4c11-8c7b-1d2cb3ba0aee"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<unk>', '<pad>', '\\x96', 'hadn', '****', '100%', 'camera-work', '*1/2', '$1', '*****']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(unk_tokens[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 139
+    },
+    "colab_type": "code",
+    "id": "AnE6D4MAdFn_",
+    "outputId": "8b3fea1a-9bcb-4fd9-ba78-72baee94f96a"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.5903, -0.1947, -0.2415],\n",
+       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
+       "        ...,\n",
+       "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
+       "        [-0.7250,  0.7545,  0.1637,  ..., -0.0144, -0.1761,  0.3418],\n",
+       "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.embedding.weight.data.copy_(pretrained_embedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1089,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1102,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1129,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1143,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1160,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1200,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1236,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1253,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1269,35 +1298,35 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.687 | Train Acc: 56.68%\n",
-      "\t Val. Loss: 0.677 |  Val. Acc: 63.89%\n",
+      "\tTrain Loss: 0.687 | Train Acc: 56.51%\n",
+      "\t Val. Loss: 0.677 |  Val. Acc: 62.87%\n",
       "Epoch: 02 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.664 | Train Acc: 65.74%\n",
-      "\t Val. Loss: 0.650 |  Val. Acc: 69.64%\n",
+      "\tTrain Loss: 0.665 | Train Acc: 65.13%\n",
+      "\t Val. Loss: 0.650 |  Val. Acc: 69.13%\n",
       "Epoch: 03 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.628 | Train Acc: 73.00%\n",
-      "\t Val. Loss: 0.610 |  Val. Acc: 74.11%\n",
-      "Epoch: 04 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.581 | Train Acc: 76.68%\n",
-      "\t Val. Loss: 0.564 |  Val. Acc: 77.74%\n",
+      "\tTrain Loss: 0.629 | Train Acc: 72.45%\n",
+      "\t Val. Loss: 0.611 |  Val. Acc: 73.54%\n",
+      "Epoch: 04 | Epoch Time: 0m 5s\n",
+      "\tTrain Loss: 0.583 | Train Acc: 76.17%\n",
+      "\t Val. Loss: 0.566 |  Val. Acc: 77.00%\n",
       "Epoch: 05 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.530 | Train Acc: 80.47%\n",
-      "\t Val. Loss: 0.518 |  Val. Acc: 80.41%\n",
+      "\tTrain Loss: 0.533 | Train Acc: 80.22%\n",
+      "\t Val. Loss: 0.521 |  Val. Acc: 80.28%\n",
       "Epoch: 06 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.481 | Train Acc: 83.37%\n",
-      "\t Val. Loss: 0.477 |  Val. Acc: 82.58%\n",
+      "\tTrain Loss: 0.484 | Train Acc: 83.24%\n",
+      "\t Val. Loss: 0.480 |  Val. Acc: 82.53%\n",
       "Epoch: 07 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.437 | Train Acc: 85.62%\n",
-      "\t Val. Loss: 0.441 |  Val. Acc: 84.43%\n",
+      "\tTrain Loss: 0.440 | Train Acc: 85.46%\n",
+      "\t Val. Loss: 0.443 |  Val. Acc: 84.40%\n",
       "Epoch: 08 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.398 | Train Acc: 87.28%\n",
-      "\t Val. Loss: 0.413 |  Val. Acc: 85.61%\n",
+      "\tTrain Loss: 0.401 | Train Acc: 87.10%\n",
+      "\t Val. Loss: 0.414 |  Val. Acc: 85.45%\n",
       "Epoch: 09 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.365 | Train Acc: 88.43%\n",
-      "\t Val. Loss: 0.390 |  Val. Acc: 86.38%\n",
+      "\tTrain Loss: 0.367 | Train Acc: 88.41%\n",
+      "\t Val. Loss: 0.390 |  Val. Acc: 86.39%\n",
       "Epoch: 10 | Epoch Time: 0m 4s\n",
-      "\tTrain Loss: 0.339 | Train Acc: 89.21%\n",
-      "\t Val. Loss: 0.370 |  Val. Acc: 86.92%\n"
+      "\tTrain Loss: 0.340 | Train Acc: 89.23%\n",
+      "\t Val. Loss: 0.370 |  Val. Acc: 86.96%\n"
      ]
     }
    ],
@@ -1328,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1343,7 +1372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.393 | Test Acc: 85.31%\n"
+      "Test Loss: 0.393 | Test Acc: 85.39%\n"
      ]
     }
    ],
@@ -1357,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1378,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1392,10 +1421,10 @@
     {
      "data": {
       "text/plain": [
-       "1.0650165677361656e-05"
+       "9.809165021579247e-06"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1422,10 +1451,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9999966621398926"
+       "0.9999963045120239"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1452,10 +1481,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7397726774215698"
+       "0.7485461235046387"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1483,10 +1512,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7397726774215698"
+       "0.7485461235046387"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
