--- a/experimental/2_rnn_gru.ipynb
+++ b/experimental/2_rnn_gru.ipynb
@@ -126,7 +126,7 @@
     "            tokens = [token.lower() for token in tokens]\n",
     "            \n",
     "        if self.max_length is not None:\n",
-    "            tokens = tokens[:max_length]\n",
+    "            tokens = tokens[:self.max_length]\n",
     "            \n",
     "        return tokens"
    ]
@@ -268,6 +268,7 @@
    "source": [
     "pad_token = '<pad>'\n",
     "pad_idx = vocab[pad_token]\n",
+    "\n",
     "collator = Collator(pad_idx)"
    ]
   },
@@ -307,7 +308,6 @@
    "source": [
     "class GRU(nn.Module):\n",
     "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
-    "\n",
     "        super().__init__()\n",
     "\n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
@@ -347,7 +347,6 @@
    "source": [
     "class GRU(nn.Module):\n",
     "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
-    "\n",
     "        super().__init__()\n",
     "\n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
@@ -387,7 +386,6 @@
    "source": [
     "class GRU(nn.Module):\n",
     "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
-    "\n",
     "        super().__init__()\n",
     "\n",
     "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
@@ -479,6 +477,85 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: embedding.weight, shape: torch.Size([25002, 100])\n",
+      "name: gru.weight_ih_l0, shape: torch.Size([768, 100])\n",
+      "name: gru.weight_hh_l0, shape: torch.Size([768, 256])\n",
+      "name: gru.bias_ih_l0, shape: torch.Size([768])\n",
+      "name: gru.bias_hh_l0, shape: torch.Size([768])\n",
+      "name: fc.weight, shape: torch.Size([2, 256])\n",
+      "name: fc.bias, shape: torch.Size([2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n, p in model.named_parameters():\n",
+    "    print(f'name: {n}, shape: {p.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_parameters(m):\n",
+    "    if isinstance(m, nn.Embedding):\n",
+    "        nn.init.uniform_(m.weight, -0.05, 0.05)\n",
+    "    elif isinstance(m, nn.GRU):\n",
+    "        for n, p in m.named_parameters():\n",
+    "            if 'weight_ih' in n:\n",
+    "                r, z, n = p.chunk(3)\n",
+    "                nn.init.xavier_uniform_(r)\n",
+    "                nn.init.xavier_uniform_(z)\n",
+    "                nn.init.xavier_uniform_(n)\n",
+    "            elif 'weight_hh' in n:\n",
+    "                r, z, n = p.chunk(3)\n",
+    "                nn.init.orthogonal_(r)\n",
+    "                nn.init.orthogonal_(z)\n",
+    "                nn.init.orthogonal_(n)\n",
+    "            elif 'bias' in n:\n",
+    "                r, z, n = p.chunk(3)\n",
+    "                nn.init.zeros_(r)\n",
+    "                nn.init.zeros_(z)\n",
+    "                nn.init.zeros_(n)\n",
+    "    elif isinstance(m, nn.Linear):\n",
+    "        nn.init.xavier_uniform_(m.weight)\n",
+    "        nn.init.zeros_(m.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GRU(\n",
+       "  (embedding): Embedding(25002, 100, padding_idx=1)\n",
+       "  (gru): GRU(100, 256)\n",
+       "  (fc): Linear(in_features=256, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.apply(initialize_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -492,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -500,30 +577,26 @@
    },
    "outputs": [],
    "source": [
-    "def get_pretrained_embedding(vectors, vocab, unk_token):\n",
+    "def get_pretrained_embedding(initial_embedding, pretrained_vectors, vocab, unk_token):\n",
     "    \n",
-    "    unk_vector = vectors[unk_token]\n",
-    "    emb_dim = unk_vector.shape[-1]\n",
-    "    zero_vector = torch.zeros(emb_dim)\n",
-    "\n",
-    "    pretrained_embedding = torch.zeros(len(vocab), emb_dim) \n",
+    "    pretrained_embedding = torch.FloatTensor(initial_embedding.weight.clone()).detach()    \n",
+    "    pretrained_vocab = pretrained_vectors.vectors.get_stoi()\n",
     "    \n",
     "    unk_tokens = []\n",
     "    \n",
     "    for idx, token in enumerate(vocab.itos):\n",
-    "        pretrained_vector = vectors[token]\n",
-    "        if torch.all(torch.eq(pretrained_vector, unk_vector)):\n",
-    "            unk_tokens.append(token)\n",
-    "            pretrained_embedding[idx] = zero_vector\n",
-    "        else:\n",
+    "        if token in pretrained_vocab:\n",
+    "            pretrained_vector = pretrained_vectors[token]\n",
     "            pretrained_embedding[idx] = pretrained_vector\n",
+    "        else:\n",
+    "            unk_tokens.append(token)\n",
     "        \n",
     "    return pretrained_embedding, unk_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -533,12 +606,12 @@
    "source": [
     "unk_token = '<unk>'\n",
     "\n",
-    "pretrained_embedding, unk_tokens = get_pretrained_embedding(glove.vectors, vocab, unk_token)"
+    "pretrained_embedding, unk_tokens = get_pretrained_embedding(model.embedding, glove, vocab, unk_token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -552,8 +625,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[ 0.0098,  0.0150, -0.0099,  ...,  0.0211, -0.0092,  0.0027],\n",
+       "        [ 0.0347,  0.0276,  0.0468,  ..., -0.0315, -0.0472, -0.0326],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
@@ -561,7 +634,7 @@
        "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +645,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.embedding.weight.data[pad_idx] = torch.zeros(emb_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0098,  0.0150, -0.0099,  ...,  0.0211, -0.0092,  0.0027],\n",
+       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
+       "        ...,\n",
+       "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
+       "        [-0.7250,  0.7545,  0.1637,  ..., -0.0144, -0.1761,  0.3418],\n",
+       "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.embedding.weight.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -585,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -598,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -611,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -625,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -642,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -682,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -718,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -735,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -750,36 +858,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.634 | Train Acc: 62.44%\n",
-      "\t Val. Loss: 0.474 |  Val. Acc: 77.64%\n",
+      "Epoch: 01 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.654 | Train Acc: 60.73%\n",
+      "\t Val. Loss: 0.584 |  Val. Acc: 68.87%\n",
       "Epoch: 02 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.375 | Train Acc: 83.86%\n",
-      "\t Val. Loss: 0.333 |  Val. Acc: 86.20%\n",
-      "Epoch: 03 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.251 | Train Acc: 90.32%\n",
-      "\t Val. Loss: 0.286 |  Val. Acc: 89.07%\n",
+      "\tTrain Loss: 0.423 | Train Acc: 80.73%\n",
+      "\t Val. Loss: 0.332 |  Val. Acc: 86.04%\n",
+      "Epoch: 03 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.252 | Train Acc: 90.15%\n",
+      "\t Val. Loss: 0.285 |  Val. Acc: 88.63%\n",
       "Epoch: 04 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.170 | Train Acc: 93.78%\n",
-      "\t Val. Loss: 0.316 |  Val. Acc: 89.58%\n",
+      "\tTrain Loss: 0.186 | Train Acc: 93.05%\n",
+      "\t Val. Loss: 0.286 |  Val. Acc: 89.40%\n",
       "Epoch: 05 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.106 | Train Acc: 96.58%\n",
-      "\t Val. Loss: 0.319 |  Val. Acc: 89.63%\n",
+      "\tTrain Loss: 0.116 | Train Acc: 95.85%\n",
+      "\t Val. Loss: 0.307 |  Val. Acc: 89.56%\n",
       "Epoch: 06 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.066 | Train Acc: 98.08%\n",
-      "\t Val. Loss: 0.327 |  Val. Acc: 89.52%\n",
+      "\tTrain Loss: 0.065 | Train Acc: 97.90%\n",
+      "\t Val. Loss: 0.354 |  Val. Acc: 89.64%\n",
       "Epoch: 07 | Epoch Time: 0m 8s\n",
-      "\tTrain Loss: 0.041 | Train Acc: 98.82%\n",
-      "\t Val. Loss: 0.451 |  Val. Acc: 88.07%\n",
-      "Epoch: 08 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.021 | Train Acc: 99.43%\n",
-      "\t Val. Loss: 0.472 |  Val. Acc: 88.16%\n",
+      "\tTrain Loss: 0.042 | Train Acc: 98.74%\n",
+      "\t Val. Loss: 0.403 |  Val. Acc: 89.35%\n",
+      "Epoch: 08 | Epoch Time: 0m 8s\n",
+      "\tTrain Loss: 0.020 | Train Acc: 99.47%\n",
+      "\t Val. Loss: 0.408 |  Val. Acc: 89.35%\n",
       "Epoch: 09 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.014 | Train Acc: 99.71%\n",
-      "\t Val. Loss: 0.520 |  Val. Acc: 88.43%\n",
+      "\tTrain Loss: 0.010 | Train Acc: 99.81%\n",
+      "\t Val. Loss: 0.505 |  Val. Acc: 88.53%\n",
       "Epoch: 10 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.005 | Train Acc: 99.93%\n",
-      "\t Val. Loss: 0.660 |  Val. Acc: 88.43%\n"
+      "\tTrain Loss: 0.007 | Train Acc: 99.85%\n",
+      "\t Val. Loss: 0.657 |  Val. Acc: 88.27%\n"
      ]
     }
    ],
@@ -810,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -825,7 +933,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.290 | Test Acc: 88.71%\n"
+      "Test Loss: 0.290 | Test Acc: 87.93%\n"
      ]
     }
    ],
@@ -839,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -861,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -875,10 +983,10 @@
     {
      "data": {
       "text/plain": [
-       "0.07642160356044769"
+       "0.06520231813192368"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -905,10 +1013,10 @@
     {
      "data": {
       "text/plain": [
-       "0.8930155634880066"
+       "0.8539475798606873"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -935,10 +1043,10 @@
     {
      "data": {
       "text/plain": [
-       "0.2206803858280182"
+       "0.15590433776378632"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -966,10 +1074,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5373267531394958"
+       "0.3470574617385864"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
