--- a/experimental/3_rnn_bilstm.ipynb
+++ b/experimental/3_rnn_bilstm.ipynb
@@ -126,7 +126,7 @@
     "            tokens = [token.lower() for token in tokens]\n",
     "            \n",
     "        if self.max_length is not None:\n",
-    "            tokens = tokens[:max_length]\n",
+    "            tokens = tokens[:self.max_length]\n",
     "            \n",
     "        return tokens"
    ]
@@ -268,6 +268,7 @@
    "source": [
     "pad_token = '<pad>'\n",
     "pad_idx = vocab[pad_token]\n",
+    "\n",
     "collator = Collator(pad_idx)"
    ]
   },
@@ -415,6 +416,101 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: embedding.weight, shape: torch.Size([25002, 100])\n",
+      "name: lstm.weight_ih_l0, shape: torch.Size([1024, 100])\n",
+      "name: lstm.weight_hh_l0, shape: torch.Size([1024, 256])\n",
+      "name: lstm.bias_ih_l0, shape: torch.Size([1024])\n",
+      "name: lstm.bias_hh_l0, shape: torch.Size([1024])\n",
+      "name: lstm.weight_ih_l0_reverse, shape: torch.Size([1024, 100])\n",
+      "name: lstm.weight_hh_l0_reverse, shape: torch.Size([1024, 256])\n",
+      "name: lstm.bias_ih_l0_reverse, shape: torch.Size([1024])\n",
+      "name: lstm.bias_hh_l0_reverse, shape: torch.Size([1024])\n",
+      "name: lstm.weight_ih_l1, shape: torch.Size([1024, 512])\n",
+      "name: lstm.weight_hh_l1, shape: torch.Size([1024, 256])\n",
+      "name: lstm.bias_ih_l1, shape: torch.Size([1024])\n",
+      "name: lstm.bias_hh_l1, shape: torch.Size([1024])\n",
+      "name: lstm.weight_ih_l1_reverse, shape: torch.Size([1024, 512])\n",
+      "name: lstm.weight_hh_l1_reverse, shape: torch.Size([1024, 256])\n",
+      "name: lstm.bias_ih_l1_reverse, shape: torch.Size([1024])\n",
+      "name: lstm.bias_hh_l1_reverse, shape: torch.Size([1024])\n",
+      "name: fc.weight, shape: torch.Size([2, 512])\n",
+      "name: fc.bias, shape: torch.Size([2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n, p in model.named_parameters():\n",
+    "    print(f'name: {n}, shape: {p.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_parameters(m):\n",
+    "    if isinstance(m, nn.Embedding):\n",
+    "        nn.init.uniform_(m.weight, -0.05, 0.05)\n",
+    "    elif isinstance(m, nn.LSTM):\n",
+    "        for n, p in m.named_parameters():\n",
+    "            if 'weight_ih' in n:\n",
+    "                i, f, g, o = p.chunk(4)\n",
+    "                nn.init.xavier_uniform_(i)\n",
+    "                nn.init.xavier_uniform_(f)\n",
+    "                nn.init.xavier_uniform_(g)\n",
+    "                nn.init.xavier_uniform_(o)\n",
+    "            elif 'weight_hh' in n:\n",
+    "                i, f, g, o = p.chunk(4)\n",
+    "                nn.init.orthogonal_(i)\n",
+    "                nn.init.orthogonal_(f)\n",
+    "                nn.init.orthogonal_(g)\n",
+    "                nn.init.orthogonal_(o)\n",
+    "            elif 'bias' in n:\n",
+    "                i, f, g, o = p.chunk(4)\n",
+    "                nn.init.zeros_(i)\n",
+    "                nn.init.ones_(f)\n",
+    "                nn.init.zeros_(g)\n",
+    "                nn.init.zeros_(o)\n",
+    "    elif isinstance(m, nn.Linear):\n",
+    "        nn.init.xavier_uniform_(m.weight)\n",
+    "        nn.init.zeros_(m.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BiLSTM(\n",
+       "  (embedding): Embedding(25002, 100, padding_idx=1)\n",
+       "  (lstm): LSTM(100, 256, num_layers=2, dropout=0.5, bidirectional=True)\n",
+       "  (fc): Linear(in_features=512, out_features=2, bias=True)\n",
+       "  (dropout): Dropout(p=0.5, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.apply(initialize_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -428,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -436,30 +532,26 @@
    },
    "outputs": [],
    "source": [
-    "def get_pretrained_embedding(vectors, vocab, unk_token):\n",
+    "def get_pretrained_embedding(initial_embedding, pretrained_vectors, vocab, unk_token):\n",
     "    \n",
-    "    unk_vector = vectors[unk_token]\n",
-    "    emb_dim = unk_vector.shape[-1]\n",
-    "    zero_vector = torch.zeros(emb_dim)\n",
-    "\n",
-    "    pretrained_embedding = torch.zeros(len(vocab), emb_dim) \n",
+    "    pretrained_embedding = torch.FloatTensor(initial_embedding.weight.clone()).detach()    \n",
+    "    pretrained_vocab = pretrained_vectors.vectors.get_stoi()\n",
     "    \n",
     "    unk_tokens = []\n",
     "    \n",
     "    for idx, token in enumerate(vocab.itos):\n",
-    "        pretrained_vector = vectors[token]\n",
-    "        if torch.all(torch.eq(pretrained_vector, unk_vector)):\n",
-    "            unk_tokens.append(token)\n",
-    "            pretrained_embedding[idx] = zero_vector\n",
-    "        else:\n",
+    "        if token in pretrained_vocab:\n",
+    "            pretrained_vector = pretrained_vectors[token]\n",
     "            pretrained_embedding[idx] = pretrained_vector\n",
+    "        else:\n",
+    "            unk_tokens.append(token)\n",
     "        \n",
     "    return pretrained_embedding, unk_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -469,12 +561,12 @@
    "source": [
     "unk_token = '<unk>'\n",
     "\n",
-    "pretrained_embedding, unk_tokens = get_pretrained_embedding(glove.vectors, vocab, unk_token)"
+    "pretrained_embedding, unk_tokens = get_pretrained_embedding(model.embedding, glove, vocab, unk_token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -488,8 +580,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.0398,  0.0357, -0.0046,  ..., -0.0485, -0.0088,  0.0329],\n",
+       "        [-0.0330,  0.0428,  0.0304,  ...,  0.0236,  0.0487,  0.0101],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
@@ -497,7 +589,7 @@
        "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.embedding.weight.data[pad_idx] = torch.zeros(emb_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -521,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -534,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -547,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -561,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -578,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -618,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -654,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -671,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -686,36 +787,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.656 | Train Acc: 60.38%\n",
-      "\t Val. Loss: 0.609 |  Val. Acc: 64.97%\n",
+      "Epoch: 01 | Epoch Time: 0m 23s\n",
+      "\tTrain Loss: 0.777 | Train Acc: 52.23%\n",
+      "\t Val. Loss: 0.683 |  Val. Acc: 53.70%\n",
       "Epoch: 02 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.594 | Train Acc: 69.33%\n",
-      "\t Val. Loss: 0.578 |  Val. Acc: 71.96%\n",
+      "\tTrain Loss: 0.683 | Train Acc: 57.90%\n",
+      "\t Val. Loss: 0.676 |  Val. Acc: 53.47%\n",
       "Epoch: 03 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.565 | Train Acc: 70.59%\n",
-      "\t Val. Loss: 0.476 |  Val. Acc: 77.87%\n",
-      "Epoch: 04 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.487 | Train Acc: 76.72%\n",
-      "\t Val. Loss: 0.453 |  Val. Acc: 79.55%\n",
+      "\tTrain Loss: 0.625 | Train Acc: 65.60%\n",
+      "\t Val. Loss: 0.482 |  Val. Acc: 78.27%\n",
+      "Epoch: 04 | Epoch Time: 0m 25s\n",
+      "\tTrain Loss: 0.483 | Train Acc: 77.15%\n",
+      "\t Val. Loss: 0.410 |  Val. Acc: 82.67%\n",
       "Epoch: 05 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.415 | Train Acc: 81.43%\n",
-      "\t Val. Loss: 0.403 |  Val. Acc: 83.60%\n",
+      "\tTrain Loss: 0.350 | Train Acc: 85.31%\n",
+      "\t Val. Loss: 0.315 |  Val. Acc: 86.75%\n",
       "Epoch: 06 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.349 | Train Acc: 85.02%\n",
-      "\t Val. Loss: 0.337 |  Val. Acc: 86.41%\n",
-      "Epoch: 07 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.308 | Train Acc: 86.93%\n",
-      "\t Val. Loss: 0.344 |  Val. Acc: 85.36%\n",
+      "\tTrain Loss: 0.294 | Train Acc: 88.14%\n",
+      "\t Val. Loss: 0.288 |  Val. Acc: 88.41%\n",
+      "Epoch: 07 | Epoch Time: 0m 25s\n",
+      "\tTrain Loss: 0.258 | Train Acc: 89.92%\n",
+      "\t Val. Loss: 0.277 |  Val. Acc: 89.14%\n",
       "Epoch: 08 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.279 | Train Acc: 88.49%\n",
-      "\t Val. Loss: 0.315 |  Val. Acc: 87.62%\n",
+      "\tTrain Loss: 0.231 | Train Acc: 91.03%\n",
+      "\t Val. Loss: 0.280 |  Val. Acc: 88.89%\n",
       "Epoch: 09 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.252 | Train Acc: 89.98%\n",
-      "\t Val. Loss: 0.326 |  Val. Acc: 88.16%\n",
+      "\tTrain Loss: 0.196 | Train Acc: 92.50%\n",
+      "\t Val. Loss: 0.285 |  Val. Acc: 89.27%\n",
       "Epoch: 10 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.218 | Train Acc: 91.31%\n",
-      "\t Val. Loss: 0.293 |  Val. Acc: 89.16%\n"
+      "\tTrain Loss: 0.175 | Train Acc: 93.53%\n",
+      "\t Val. Loss: 0.316 |  Val. Acc: 89.55%\n"
      ]
     }
    ],
@@ -746,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -761,7 +862,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.307 | Test Acc: 88.17%\n"
+      "Test Loss: 0.291 | Test Acc: 88.06%\n"
      ]
     }
    ],
@@ -775,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -797,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -811,10 +912,10 @@
     {
      "data": {
       "text/plain": [
-       "0.015085793100297451"
+       "0.06933268904685974"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -841,10 +942,10 @@
     {
      "data": {
       "text/plain": [
-       "0.991886556148529"
+       "0.9730159640312195"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -871,10 +972,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6712993383407593"
+       "0.1614144891500473"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -902,10 +1003,10 @@
     {
      "data": {
       "text/plain": [
-       "0.28944137692451477"
+       "0.5040232539176941"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
