--- a/experimental/4_cnn.ipynb
+++ b/experimental/4_cnn.ipynb
@@ -127,7 +127,7 @@
     "            tokens = [token.lower() for token in tokens]\n",
     "            \n",
     "        if self.max_length is not None:\n",
-    "            tokens = tokens[:max_length]\n",
+    "            tokens = tokens[:self.max_length]\n",
     "            \n",
     "        return tokens"
    ]
@@ -419,6 +419,78 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: embedding.weight, shape: torch.Size([25002, 100])\n",
+      "name: convs.0.weight, shape: torch.Size([100, 100, 3])\n",
+      "name: convs.0.bias, shape: torch.Size([100])\n",
+      "name: convs.1.weight, shape: torch.Size([100, 100, 4])\n",
+      "name: convs.1.bias, shape: torch.Size([100])\n",
+      "name: convs.2.weight, shape: torch.Size([100, 100, 5])\n",
+      "name: convs.2.bias, shape: torch.Size([100])\n",
+      "name: fc.weight, shape: torch.Size([2, 300])\n",
+      "name: fc.bias, shape: torch.Size([2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n, p in model.named_parameters():\n",
+    "    print(f'name: {n}, shape: {p.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_parameters(m):\n",
+    "    if isinstance(m, nn.Embedding):\n",
+    "        nn.init.uniform_(m.weight, -0.05, 0.05)\n",
+    "    elif isinstance(m, nn.Conv1d):\n",
+    "        nn.init.xavier_uniform_(m.weight)\n",
+    "        nn.init.zeros_(m.bias)\n",
+    "    elif isinstance(m, nn.Linear):\n",
+    "        nn.init.xavier_uniform_(m.weight)\n",
+    "        nn.init.zeros_(m.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNN(\n",
+       "  (embedding): Embedding(25002, 100, padding_idx=1)\n",
+       "  (convs): ModuleList(\n",
+       "    (0): Conv1d(100, 100, kernel_size=(3,), stride=(1,))\n",
+       "    (1): Conv1d(100, 100, kernel_size=(4,), stride=(1,))\n",
+       "    (2): Conv1d(100, 100, kernel_size=(5,), stride=(1,))\n",
+       "  )\n",
+       "  (fc): Linear(in_features=300, out_features=2, bias=True)\n",
+       "  (dropout): Dropout(p=0.5, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.apply(initialize_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -432,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,30 +512,26 @@
    },
    "outputs": [],
    "source": [
-    "def get_pretrained_embedding(vectors, vocab, unk_token):\n",
+    "def get_pretrained_embedding(initial_embedding, pretrained_vectors, vocab, unk_token):\n",
     "    \n",
-    "    unk_vector = vectors[unk_token]\n",
-    "    emb_dim = unk_vector.shape[-1]\n",
-    "    zero_vector = torch.zeros(emb_dim)\n",
-    "\n",
-    "    pretrained_embedding = torch.zeros(len(vocab), emb_dim) \n",
+    "    pretrained_embedding = torch.FloatTensor(initial_embedding.weight.clone()).detach()    \n",
+    "    pretrained_vocab = pretrained_vectors.vectors.get_stoi()\n",
     "    \n",
     "    unk_tokens = []\n",
     "    \n",
     "    for idx, token in enumerate(vocab.itos):\n",
-    "        pretrained_vector = vectors[token]\n",
-    "        if torch.all(torch.eq(pretrained_vector, unk_vector)):\n",
-    "            unk_tokens.append(token)\n",
-    "            pretrained_embedding[idx] = zero_vector\n",
-    "        else:\n",
+    "        if token in pretrained_vocab:\n",
+    "            pretrained_vector = pretrained_vectors[token]\n",
     "            pretrained_embedding[idx] = pretrained_vector\n",
+    "        else:\n",
+    "            unk_tokens.append(token)\n",
     "        \n",
     "    return pretrained_embedding, unk_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -473,12 +541,12 @@
    "source": [
     "unk_token = '<unk>'\n",
     "\n",
-    "pretrained_embedding, unk_tokens = get_pretrained_embedding(glove.vectors, vocab, unk_token)"
+    "pretrained_embedding, unk_tokens = get_pretrained_embedding(model.embedding, glove, vocab, unk_token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -492,8 +560,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.0220, -0.0288, -0.0422,  ...,  0.0103,  0.0218, -0.0141],\n",
+       "        [ 0.0326,  0.0222,  0.0044,  ...,  0.0249,  0.0163,  0.0052],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [-0.2925,  0.1087,  0.7920,  ..., -0.3641,  0.1822, -0.4104],\n",
@@ -501,7 +569,7 @@
        "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.embedding.weight.data[pad_idx] = torch.zeros(emb_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -525,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -538,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -551,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -565,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -622,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -658,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -675,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -691,35 +768,35 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.720 | Train Acc: 55.50%\n",
-      "\t Val. Loss: 0.617 |  Val. Acc: 67.59%\n",
+      "\tTrain Loss: 1.370 | Train Acc: 53.26%\n",
+      "\t Val. Loss: 0.588 |  Val. Acc: 69.31%\n",
       "Epoch: 02 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.593 | Train Acc: 68.32%\n",
-      "\t Val. Loss: 0.480 |  Val. Acc: 79.81%\n",
+      "\tTrain Loss: 0.796 | Train Acc: 60.77%\n",
+      "\t Val. Loss: 0.562 |  Val. Acc: 73.82%\n",
       "Epoch: 03 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.456 | Train Acc: 79.10%\n",
-      "\t Val. Loss: 0.385 |  Val. Acc: 83.43%\n",
+      "\tTrain Loss: 0.620 | Train Acc: 67.86%\n",
+      "\t Val. Loss: 0.523 |  Val. Acc: 78.67%\n",
       "Epoch: 04 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.384 | Train Acc: 82.80%\n",
-      "\t Val. Loss: 0.347 |  Val. Acc: 85.50%\n",
+      "\tTrain Loss: 0.523 | Train Acc: 74.40%\n",
+      "\t Val. Loss: 0.459 |  Val. Acc: 81.48%\n",
       "Epoch: 05 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.348 | Train Acc: 84.98%\n",
-      "\t Val. Loss: 0.327 |  Val. Acc: 86.35%\n",
+      "\tTrain Loss: 0.459 | Train Acc: 78.51%\n",
+      "\t Val. Loss: 0.416 |  Val. Acc: 83.35%\n",
       "Epoch: 06 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.316 | Train Acc: 86.65%\n",
-      "\t Val. Loss: 0.312 |  Val. Acc: 87.05%\n",
+      "\tTrain Loss: 0.412 | Train Acc: 81.52%\n",
+      "\t Val. Loss: 0.381 |  Val. Acc: 84.52%\n",
       "Epoch: 07 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.291 | Train Acc: 87.85%\n",
-      "\t Val. Loss: 0.305 |  Val. Acc: 87.50%\n",
+      "\tTrain Loss: 0.374 | Train Acc: 83.71%\n",
+      "\t Val. Loss: 0.369 |  Val. Acc: 84.95%\n",
       "Epoch: 08 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.263 | Train Acc: 89.14%\n",
-      "\t Val. Loss: 0.301 |  Val. Acc: 87.73%\n",
+      "\tTrain Loss: 0.356 | Train Acc: 84.29%\n",
+      "\t Val. Loss: 0.356 |  Val. Acc: 85.49%\n",
       "Epoch: 09 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.242 | Train Acc: 90.23%\n",
-      "\t Val. Loss: 0.296 |  Val. Acc: 88.02%\n",
+      "\tTrain Loss: 0.339 | Train Acc: 85.20%\n",
+      "\t Val. Loss: 0.344 |  Val. Acc: 85.92%\n",
       "Epoch: 10 | Epoch Time: 0m 9s\n",
-      "\tTrain Loss: 0.226 | Train Acc: 90.82%\n",
-      "\t Val. Loss: 0.290 |  Val. Acc: 88.22%\n"
+      "\tTrain Loss: 0.318 | Train Acc: 86.43%\n",
+      "\t Val. Loss: 0.334 |  Val. Acc: 86.28%\n"
      ]
     }
    ],
@@ -750,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -765,7 +842,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.295 | Test Acc: 87.70%\n"
+      "Test Loss: 0.338 | Test Acc: 85.99%\n"
      ]
     }
    ],
@@ -779,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -814,10 +891,10 @@
     {
      "data": {
       "text/plain": [
-       "0.025242310017347336"
+       "0.08827298134565353"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -844,10 +921,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7093814015388489"
+       "0.6329940557479858"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -874,10 +951,10 @@
     {
      "data": {
       "text/plain": [
-       "0.04373614862561226"
+       "0.060872383415699005"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -905,10 +982,10 @@
     {
      "data": {
       "text/plain": [
-       "0.049333445727825165"
+       "0.07820437103509903"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
